<resources>
    <string name="app_name">Philately Catalog</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">Email (Username)</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="forgot">Forgot?</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="app_id">510014449200632</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="country">Country</string>
    <string name="create_account_text">Create an account. It\'s free and always will be.</string>
    <string-array name="list_of_countries">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Antarctica</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Antigua and Barbuda</item>
        <item>Azerbaijan</item>
        <item>Argentina</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Bahamas</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Armenia</item>
        <item>Barbados</item>
        <item>Belgium</item>
        <item>Bermuda</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item>Bosnia and Herzegovina</item>
        <item>Botswana</item>
        <item>Bouvet Island</item>
        <item>Brazil</item>
        <item>Belize</item>
        <item>British Indian Ocean Territory</item>
        <item>Solomon Islands</item>
        <item>Virgin Islands, British</item>
        <item>Brunei Darussalam</item>
        <item>Bulgaria</item>
        <item>Myanmar</item>
        <item>Burundi</item>
        <item>Belarus</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Cape Verde</item>
        <item>Cayman Islands</item>
        <item>Central African Republic</item>
        <item>Sri Lanka</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Taiwan</item>
        <item>Christmas Island</item>
        <item>Cocos (Keeling) Islands</item>
        <item>Colombia</item>
        <item>Comoros</item>
        <item>Mayotte</item>
        <item>Congo</item>
        <item>Congo, Democratic Republic of the</item>
        <item>Cook Islands</item>
        <item>Costa Rica</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Cyprus</item>
        <item>Czech Republic</item>
        <item>Benin</item>
        <item>Denmark</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>
        <item>Ecuador</item>
        <item>El Salvador</item>
        <item>Equatorial Guinea</item>
        <item>Ethiopia</item>
        <item>Eritrea</item>
        <item>Estonia</item>
        <item>Faroe Islands</item>
        <item>Falkland Islands (Malvinas)</item>
        <item>South Georgia and the South Sandwich Islands</item>
        <item>Fiji</item>
        <item>Finland</item>
        <item>Aland Islands</item>
        <item>France</item>
        <item>French Guiana</item>
        <item>French Polynesia</item>
        <item>French Southern Territories</item>
        <item>Djibouti</item>
        <item>Gabon</item>
        <item>Georgia</item>
        <item>Gambia</item>
        <item>Palestinian Territory, Occupied</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Gibraltar</item>
        <item>Kiribati</item>
        <item>Greece</item>
        <item>Greenland</item>
        <item>Grenada</item>
        <item>Guadeloupe</item>
        <item>Guam</item>
        <item>Guatemala</item>
        <item>Guinea</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Heard Island and McDonald Islands</item>
        <item>Holy See (Vatican City State)</item>
        <item>Honduras</item>
        <item>Hong Kong</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Cote d\'Ivoire</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Kazakhstan</item>
        <item>Jordan</item>
        <item>Kenya</item>
        <item>North Korea</item>
        <item>South Korea</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Laos</item>
        <item>Lebanon</item>
        <item>Lesotho</item>
        <item>Latvia</item>
        <item>Liberia</item>
        <item>Libyan Arab Jamahiriya</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Macao</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Maldives</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Martinique</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mexico</item>
        <item>Monaco</item>
        <item>Mongolia</item>
        <item>Moldova</item>
        <item>Montenegro</item>
        <item>Montserrat</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Oman</item>
        <item>Namibia</item>
        <item>Nauru</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>Netherlands Antilles</item>
        <item>Aruba</item>
        <item>New Caledonia</item>
        <item>Vanuatu</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>Niue</item>
        <item>Norfolk Island</item>
        <item>Norway</item>
        <item>Northern Mariana Islands</item>
        <item>United States Minor Outlying Islands</item>
        <item>Micronesia</item>
        <item>Marshall Islands</item>
        <item>Palau</item>
        <item>Pakistan</item>
        <item>Panama</item>
        <item>Papua New Guinea</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Pitcairn</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Guinea-Bissau</item>
        <item>Timor-Leste</item>
        <item>Puerto Rico</item>
        <item>Qatar</item>
        <item>Réunion</item>
        <item>Romania</item>
        <item>Russian Federation</item>
        <item>Rwanda</item>
        <item>Saint Barthélemy</item>
        <item>Saint Helena</item>
        <item>Saint Kitts and Nevis</item>
        <item>Anguilla</item>
        <item>Saint Lucia</item>
        <item>Saint Martin (French part)</item>
        <item>Saint Pierre and Miquelon</item>
        <item>Saint Vincent and the Grenadines</item>
        <item>San Marino</item>
        <item>Sao Tome and Principe</item>
        <item>Saudi Arabia</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Singapore</item>
        <item>Slovakia</item>
        <item>Viet Nam</item>
        <item>Slovenia</item>
        <item>Somalia</item>
        <item>South Africa</item>
        <item>Zimbabwe</item>
        <item>Spain</item>
        <item>Western Sahara</item>
        <item>Sudan</item>
        <item>Suriname</item>
        <item>Svalbard and Jan Mayen</item>
        <item>Swaziland</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Syria</item>
        <item>Tajikistan</item>
        <item>Thailand</item>
        <item>Togo</item>
        <item>Tokelau</item>
        <item>Tonga</item>
        <item>Trinidad and Tobago</item>
        <item>United Arab Emirates</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Turkmenistan</item>
        <item>Turks and Caicos Islands</item>
        <item>Tuvalu</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>Macedonia</item>
        <item>Egypt</item>
        <item>United Kingdom</item>
        <item>Guernsey</item>
        <item>Jersey</item>
        <item>Isle of Man</item>
        <item>Tanzania</item>
        <item>United States</item>
        <item>Virgin Islands, U.S.</item>
        <item>Burkina Faso</item>
        <item>Uruguay</item>
        <item>Uzbekistan</item>
        <item>Venezuela</item>
        <item>Wallis and Futuna</item>
        <item>Samoa</item>
        <item>Yemen</item>
        <item>Zambia</item>
    </string-array>

    <string name="title_activity_login_header">Login</string>
    <string name="title_activity_login_page_line1">Sign in with</string>
    <string name="title_activity_login_page_line2">or</string>
    <string name="title_activity_register">RegisterActivity</string>
</resources>
